--- a/session4/bft/Cargo.toml
+++ b/session4/bft/Cargo.toml
@@ -11,3 +11,4 @@ edition = "2021"
 [dependencies]
 bft_types = { version = "0.1.0", path = "bft_types" }
 bft_interp = { version = "0.1.0", path = "bft_interp" }
+clap = { version = "4.1.11", features = ["derive", "cargo"] }
