--- a/session4/bft/bft_interp/Cargo.toml
+++ b/session4/bft/bft_interp/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 bft_types = { version = "0.1.0", path = "../bft_types" }
+cli = { version = "0.1.0", path = "../cli" }
 anyhow = "1.0.70"
