--- a/session4/bft/cli/Cargo.toml
+++ b/session4/bft/cli/Cargo.toml
@@ -1,16 +1,10 @@
-[workspace]
-members = [ "bft_types", "bft_interp" ]
-
 [package]
-name = "bft"
+name = "cli"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bft_types = { version = "0.1.0", path = "bft_types" }
-bft_interp = { version = "0.1.0", path = "bft_interp" }
-cli = { version = "0.1.0", path = "cli" }
 clap = { version = "4.1.11", features = ["derive", "cargo"] }
 anyhow = "1.0.70"
