--- a/session5/bft/bft_interp/Cargo.toml
+++ b/session5/bft/bft_interp/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 bft_types = { version = "0.1.0", path = "../bft_types" }
 cli = { version = "0.1.0", path = "../cli" }
 anyhow = "1.0.70"
+thiserror = "1.0.40"
