Task two of session 5: Add inc/dec of data value with traits. Fix bug to actually create the tape

--- a/session5/bft/bft_interp/Cargo.toml
+++ b/session5/bft/bft_interp/Cargo.toml
@@ -10,3 +10,4 @@ bft_types = { version = "0.1.0", path = "../bft_types" }
 cli = { version = "0.1.0", path = "../cli" }
 anyhow = "1.0.70"
 thiserror = "1.0.40"
+num-traits = "0.2.15"
