--- a/session5/bft/Cargo.toml
+++ b/session5/bft/Cargo.toml
@@ -15,3 +15,4 @@ cli = { version = "0.1.0", path = "cli" }
 clap = { version = "4.1.11", features = ["derive", "cargo"] }
 anyhow = "1.0.70"
 thiserror = "1.0.40"
+num-traits = "0.2.15"
