--- a/.github/workflows/build-bf-interpreter.yml
+++ b/.github/workflows/build-bf-interpreter.yml
@@ -10,4 +10,4 @@ jobs:
         with:
           node-version: '14'
       - run: npm install -g bats
-      - run: bats mysql-avail.bats
+      - run: bats check-tmp-dir.bats
