Change folder and run in one command

--- a/.github/workflows/build-bf-interpreter.yml
+++ b/.github/workflows/build-bf-interpreter.yml
@@ -13,5 +13,4 @@ jobs:
       - run: rustc -V
       - run: pwd
       - run: ls -l
-      - run: cd session6/bft
-      - run: cargo run
+      - run: cd session6/bft; cargo run
