--- a/.github/workflows/build-bf-interpreter.yml
+++ b/.github/workflows/build-bf-interpreter.yml
@@ -13,4 +13,4 @@ jobs:
       - run: rustc -V
       - run: pwd
       - run: ls -l
-      - run: cd session6/bft; cargo run
+      - run: cd session6/bft; cargo run hello-world.bf
